--- a/babyshark_simplicity.html
+++ b/babyshark_simplicity.html
@@ -4,7 +4,7 @@
   set @Word_Doo = ', doo doo doo doo doo doo'
   set @NewLine = '<br>'
   
-  set @Main_Words_Per_Verse = ""Baby shark,Mommy shark,Daddy shark,Grandma shark,Grandpa shark,Let's go hunt,Run away,Safe at last,It's the end""
+  set @Main_Words_Per_Verse = "Baby shark,Mommy shark,Daddy shark,Grandma shark,Grandpa shark,Let's go hunt,Run away,Safe at last,It's the end"
   
   set @Rowset_of_Main_Words = BuildRowsetFromString(@Main_Words_Per_Verse,',')
 
