--- a/babyshark_efficency.html
+++ b/babyshark_efficency.html
@@ -9,7 +9,7 @@ FOR
 TO
 4
 DO
-Output(Field(Row(BuildRowsetFromString(""Baby
+Output(Field(Row(BuildRowsetFromString("Baby
 
 Mommy
 
@@ -32,7 +32,7 @@ last
 
 It's
 the
-end"",'
+end",'
 
 '),@i),1)
 IIF(@i<6,'
